Moved image files to resources folder

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			margin: 0 auto;
 			max-width: 600px;
 			background: #232323;
-			background: url("https://cdn.wallpapersafari.com/0/46/T5EMWx.jpg");
+			background: url("resources/Background.jpg");
 		}
 		div {
 			height: 400px;
@@ -61,17 +61,17 @@
 		}
 		
 		.first{
-			background-image: url("http://image.ibb.co/eKcqk6/1.jpg");
+			background-image: url("resources/1.jpg");
 			background-size: cover;
 			background-position: center;
 		}
 		.second{
-			background-image: url("http://image.ibb.co/hLULk6/2.jpg");
+			background-image: url("resources/2.jpg");
 			background-position: left center;
 			background-size: cover;
 		}
 		.third{
-			background-image: url("http://image.ibb.co/cOjWsm/3.jpg");
+			background-image: url("resources/3.jpg");
 			background-position: center;
 			background-size: cover;
 		}
